# cw7

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
config/: celery.py  settings.py  urls.py
habits/: models.py  serializers.py  tasks.py  views.py
habits/migrations/: 0001_initial.py  0002_habit_telegram_user_id.py  0003_alter_habit_options.py  0004_remove_habit_telegram_user_id.py
habits/tests/: conftest.py  test_models.py  test_serializers.py  test_tasks.py  test_views.py
telegram_bot/: bot.py
telegram_bot/management/commands/: run_telegram_bot.py
users/: admin.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
